# opcgw

./: .env  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  SECURITY.md  build.rs  docker-compose.yml  log4rs.yaml  open_points.md  open_points.md.1  projet.md  todo.md  write.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  clippy.yml  codecov.yml  docker-build.yml  docker.yml
_bmad-output/implementation-artifacts/: 1-1-update-dependencies-and-rust-toolchain.md  1-2-migrate-logging-from-log4rs-to-tracing.md  1-3-comprehensive-error-handling.md  1-4-graceful-shutdown-with-cancellationtoken.md  1-5-configuration-validation-and-clean-startup.md  2-1-storagebackend-trait-and-inmemorybackend.md  2-1a-storagebackend-trait-definition.md  2-1b-core-storage-data-types.md  2-1c-inmemorybackend-implementation.md  2-2-type-system-sql-alignment.md  2-2a-sqlite-schema-design.md  2-2b-schema-creation-and-migration.md  2-2c-sqlitebackend-basic-crud-implementation.md  2-2d-prepared-statements-and-sql-safety.md  2-2x-per-task-connections.md  2-3a-metric-values-persistence-upsert.md  2-3b-historical-metrics-append-only.md  2-3c-batch-write-optimization.md  2-4a-code-review-fixes.md  2-4a-metric-restore-on-startup.md  2-4b-graceful-degradation.md  2-5a-historical-data-pruning-task.md  2-5b-pruning-integration-testing.md  3-1-sqlite-backed-fifo-command-queue.md  3-2-command-parameter-validation.md  3-3-command-delivery-status-reporting.md  4-1-poller-refactoring-to-sqlite-backend.md  4-2-support-all-chirpstack-metric-types.md  4-3-api-pagination-for-large-deployments.md  4-4-auto-recovery-from-chirpstack-outages.md  5-1-opc-ua-server-refactoring-to-sqlite-backend.md  5-2-stale-data-detection-and-status-codes.md  5-3-gateway-health-metrics-in-opc-ua.md  6-1-comprehensive-logging-infrastructure.md  6-2-configurable-log-verbosity.md  6-3-remote-diagnostics-for-known-failures.md  7-1-credential-management-via-environment-variables.md  7-2-opc-ua-security-endpoints-and-authentication.md  7-3-connection-limiting.md  8-1-async-opcua-subscription-spike.md  (+77 more)
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-04-20.md  implementation-readiness-report.md  prd-validation-report.md  prd.md  product-brief-opcgw-distillate.md  product-brief-opcgw.md  sprint-change-proposal-2026-05-14.md  sprint-change-proposal-2026-06-08.md  sprint-change-proposal-2026-06-09.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
_bmad/wds/: config.yaml
config/: config.example.toml  config.toml  default.toml  log4rs.yaml  log4rs.yaml.example  server.conf
doc/: architecture.md  async_opcua.md  planning.md  requirements.md
docs/: README.md  _config.yml  api-contracts.md  architecture.md  c-6-migration-runbook.md  configuration.md  contributing.md  d-0-migration-runbook.md  deployment-guide.md  development-guide.md  dockerhub-description.md  features.md  index.md  inventory-api.md  logging.md  planning.md  project-overview.md  project-scan-report.json  quickstart.md  requirements.md  roadmap.md  schema-design.md  security.md  source-tree-analysis.md  usecases.md  web-api.md
docs/_layouts/: default.html
docs/images/: architecture.dot
docs/logo/: README.md
docs/manual/: Makefile  README.md  index.xml  opcgw-user-manual.xml  opcgw.xpr
examples/: opcua_client_smoke.rs  opcua_subscription_spike.rs
migrations/: v001_initial.sql  v002_add_command_fields.sql  v003_make_payload_optional.sql  v004_add_command_indexes.sql  v005_gateway_status.sql  v006_gateway_status_health_metrics.sql  v007_typed_value_columns.sql  v008_typed_value_constraints.sql  v009_application_config_tables.sql  v010_singleton_config_tables.sql  v011_command_class.sql  v012_device_stale_threshold.sql  v013_error_events.sql  v014_device_source_timestamp.sql
pki/own/: cert.der
pki/private/: private.pem
pki/trusted/: NodeOPCUA-Client@b6fcd8affb49 [0cf329eaee2bf117f25bd01add1334717119fd8c].der
proto/common/: common.proto
schema/: v001_initial.sql
scripts/: check-c6-migration.sh  check-d0-migration.sh  check-schema-version.sh
src/: chirpstack.rs  chirpstack_events.rs  chirpstack_inventory.rs  chirpstack_test.rs  command_validation.rs  config.rs  config_reload.rs  device_registry.rs  lib.rs  main.rs  opc_ua.rs  opc_ua_auth.rs  opc_ua_history.rs  opc_ua_session_monitor.rs  opcua_topology_apply.rs  security.rs  security_hmac.rs  storage.rs  utils.rs
static/: applications.html  applications.js  apply-bar.js  commands.html  commands.js  config-io.js  config.html  config.js  dashboard.css  dashboard.js  devices-config.html  devices-config.js  devices.html  errors.html  errors.js  field-help.js  index.html  inventory-drift.html  inventory-drift.js  inventory-picker.js  metrics.html  metrics.js  setup.html  shell.js  singleton-config.html  singleton-config.js
target_Guy_Oct-09-093242-2024_conflict_current/: .rustc_info.json
tests/: command_delivery_tests.rs  command_validation_tests.rs  config_hot_reload.rs  d2_figment_provider.rs  error_events.rs  main_138_rescope.rs  main_apply_restart.rs  main_startup_no_deadlock.rs  metric_types_test.rs  opc_ua_connection_limit.rs  opc_ua_read_typed_payload.rs  opc_ua_security_endpoints.rs  opc_ua_sqlite_backend_tests.rs  opcua_dynamic_address_space_apply.rs  opcua_dynamic_address_space_spike.rs  opcua_history.rs  opcua_history_bench.rs  opcua_historyread_typed_payload.rs  opcua_subscription_spike.rs  pagination_tests.rs  pruning_integration_tests.rs  sqlite_application_list_on_restart.rs  sqlite_config_migration.rs  sqlite_singleton_config_migration.rs  staleness_detection_tests.rs  web_application_crud.rs  web_auth.rs  web_command_crud.rs  web_config_io.rs  web_dashboard.rs  web_device_crud.rs  web_duplicate_prevention.rs  web_inventory.rs  web_inventory_drift.rs  web_picker.rs  web_setup_wizard.rs  web_singleton_config.rs
(+1237 files in other folders)
