[package]
name = "opcgw"
version = "1.0.0"
authors = ["Guy Corbaz <guy@corbaz.org>"]
description = "A Chirpstack to opc ua gateway"
readme = "README.md"
keywords = ["scada","gateway","opc_ua","chirpstack"]
license = "MIT OR Apache-2.0"
rust-version = "1.87.0"
edition = "2021"
categories = ["science"]
publish = false # for now, until a running version is available

[dependencies]
figment = { version = "0.10.19", features = ["env", "toml"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full", "rt-multi-thread"] }
thiserror = "2.0.16"
log = "0.4.28"
log4rs = "1.4.0"
tonic = "0.13.1"
tonic-build = "0.13.1"
chirpstack_api = "4.13.0"
prost-types = "0.13.5"
async-opcua = { version = "^0.16.0", features = ["server"] }
clap = { version = "4.5.47", features = ["derive"] }
local-ip-address = "0.6.5"
url = "2.5.4"

[build-dependencies]
tonic-build = "0.13.1"

[profile.dev]
opt-level = 0
codegen-units = 32

[profile.test]
debug = true
opt-level = 1

[profile.release]
opt-level = 3
lto = true
