[package]
name = "opcgw"
version = "2.0.0"
authors = ["Guy Corbaz <guy@corbaz.org>"]
description = "A Chirpstack to opc ua gateway"
readme = "README.md"
keywords = ["scada","gateway","opc_ua","chirpstack"]
license = "MIT OR Apache-2.0"
rust-version = "1.94.0"
edition = "2021"
categories = ["science"]
publish = false # for now, until a running version is available

[dependencies]
figment = { version = "0.10.19", features = ["env", "toml"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full", "rt-multi-thread"] }
thiserror = "2.0.18"
tonic = "0.14.5"
chirpstack_api = "4.17.0"
async-opcua = { version = "0.17.1", features = ["server"] }
constant_time_eq = "0.3"
hmac = "0.12"
# Story 7-2 + 9-1: per-process HMAC keying via OS RNG. Pinned to 0.2
# explicitly because `getrandom` 0.3 renamed the entry point from
# `getrandom(&mut [u8])` to `fill(&mut [u8])`; a transitive bump
# would silently break compilation. Story 9-1 review iter-1 patch.
getrandom = "0.2"
clap = { version = "4.6.0", features = ["derive"] }
local-ip-address = "0.6.5"
url = "2.5.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "chrono"] }
tracing-appender = "0.2.3"
chrono = { version = "0.4.26", features = ["serde"] }
async-trait = "0.1.81"
serde_json = "1.0.132"
sha2 = "0.10.8"
dashmap = "6.1"

# Dependencies for later stories (added now, not yet used)
tokio-util = "0.7.18"
rusqlite = { version = "0.38.0", features = ["bundled"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }

# Story 9-1: embedded Axum web server for FR50 / NFR11 / NFR12 / FR41.
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
base64 = "0.22"

[dev-dependencies]
# `no-env-filter` so tests in this crate's integration suite can capture
# log events from any crate (including the gateway's own `opcgw::*`
# targets) — the default filter would only capture events from the test
# binary itself, which masks audit-trail events emitted by spawned
# server tasks. Story 7-2's `tests/opc_ua_security_endpoints.rs`
# depends on this.
tracing-test = { version = "=0.2.6", features = ["no-env-filter"] }  # Issue #101: exact-pin while spike-tests use tracing_test::internal::global_buf() (private API). Bump only after the test-harness extraction (issue #102) replaces internal:: with a public layer.
temp-env = "0.3"
tempfile = "3"
# Story 7-3: serialise integration tests in tests/opc_ua_connection_limit.rs
# so the process-wide tracing-test buffer + the at-limit-accept layer's
# shared state never have two tests racing for the same OPC UA server.
serial_test = "3"
# Test/example-only access to async-opcua's client API. Kept out of the
# production binary to limit attack surface (no outbound OPC UA client in a
# release build) and shrink the release binary. Tests + examples have access
# to dev-dependencies, so `cargo test` and `cargo build --examples`
# transparently see both server + client features merged.
async-opcua = { version = "0.17.1", features = ["client"] }
# Story 9-1 integration tests: HTTP client for the embedded web server.
# Dev-only — no inbound HTTP client in a release build.
reqwest = { version = "0.12", default-features = false, features = ["http2"] }
# Story 9-1 unit tests: tower::ServiceExt::oneshot for in-process Axum
# middleware testing without binding a TCP listener.
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
tonic-build = "0.14.5"
tonic-prost-build = "0.14.5"

[profile.dev]
opt-level = 0
codegen-units = 32

[profile.test]
debug = true
opt-level = 1

[profile.release]
opt-level = 3
lto = true
